--- a/index.html
+++ b/index.html
@@ -119,11 +119,11 @@
     
             <div class="video">
                 <a href="https://www.youtube.com/watch?v=9rH5eJCjhtg" target="_blank">
-                    <img src="https://i.ytimg.com/vi/9rH5eJCjhtg/mqdefault.jpg" alt="Why smart people fall for self-help gurus">
+                    <img src="https://i.ytimg.com/vi/9rH5eJCjhtg/mqdefault.jpg" alt="The problem with self-help gurus">
                     <div class="video-info">
-                        <h3>Why smart people fall for self-help gurus</h3>
+                        <h3>The problem with self-help gurus</h3>
                         <div class="channel">Matt D'Avella</div>
-                        <div class="date">6 hours ago</div>
+                        <div class="date">7 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -134,7 +134,7 @@
                     <div class="video-info">
                         <h3>Review  Pizza tools.( Pro Peel Gozney and Lilly Codroipo Spatula)</h3>
                         <div class="channel">Massimo Nocerino</div>
-                        <div class="date">7 hours ago</div>
+                        <div class="date">8 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -145,7 +145,7 @@
                     <div class="video-info">
                         <h3>🔴 Battlefield 6 BATTLE ROYALE IS HERE!</h3>
                         <div class="channel">Vikkstar123</div>
-                        <div class="date">8 hours ago</div>
+                        <div class="date">9 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -156,7 +156,7 @@
                     <div class="video-info">
                         <h3>Why You Can’t Afford to Bank That Winning Trade 💭</h3>
                         <div class="channel">Charlie Burton Trading</div>
-                        <div class="date">8 hours ago</div>
+                        <div class="date">9 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -189,7 +189,7 @@
                     <div class="video-info">
                         <h3>Embrace Challenges for Growth | Eckhart Tolle on Awakening Though Life's Challenges (Part 3)</h3>
                         <div class="channel">Eckhart Tolle</div>
-                        <div class="date">12 hours ago</div>
+                        <div class="date">13 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -222,7 +222,7 @@
                     <div class="video-info">
                         <h3>Emotional Trading: Key Skills for Successful Traders #shorts</h3>
                         <div class="channel">Algo Trading With Kevin Davey</div>
-                        <div class="date">17 hours ago</div>
+                        <div class="date">18 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -233,7 +233,7 @@
                     <div class="video-info">
                         <h3>How to stretching a pizza a Dj style very easy way #pizzamaker #pizzatools #pizzadough</h3>
                         <div class="channel">Massimo Nocerino</div>
-                        <div class="date">19 hours ago</div>
+                        <div class="date">20 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -255,7 +255,7 @@
                     <div class="video-info">
                         <h3>Ecstasy Beyond Pills | Sadhguru</h3>
                         <div class="channel">Sadhguru</div>
-                        <div class="date">21 hours ago</div>
+                        <div class="date">22 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -266,7 +266,7 @@
                     <div class="video-info">
                         <h3>Darwinex TV: Performance Coaching - Session 12</h3>
                         <div class="channel">Darwinex</div>
-                        <div class="date">22 hours ago</div>
+                        <div class="date">23 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -5083,7 +5083,7 @@
                         <div class="video-info">
                             <h3>Why You Can’t Afford to Bank That Winning Trade 💭</h3>
                             <div class="channel">Charlie Burton Trading</div>
-                            <div class="date">8 hours ago</div>
+                            <div class="date">9 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -5105,7 +5105,7 @@
                         <div class="video-info">
                             <h3>Emotional Trading: Key Skills for Successful Traders #shorts</h3>
                             <div class="channel">Algo Trading With Kevin Davey</div>
-                            <div class="date">17 hours ago</div>
+                            <div class="date">18 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -5116,7 +5116,7 @@
                         <div class="video-info">
                             <h3>Darwinex TV: Performance Coaching - Session 12</h3>
                             <div class="channel">Darwinex</div>
-                            <div class="date">22 hours ago</div>
+                            <div class="date">23 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -7238,7 +7238,7 @@
                         <div class="video-info">
                             <h3>Embrace Challenges for Growth | Eckhart Tolle on Awakening Though Life's Challenges (Part 3)</h3>
                             <div class="channel">Eckhart Tolle</div>
-                            <div class="date">12 hours ago</div>
+                            <div class="date">13 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -7271,7 +7271,7 @@
                         <div class="video-info">
                             <h3>Ecstasy Beyond Pills | Sadhguru</h3>
                             <div class="channel">Sadhguru</div>
-                            <div class="date">21 hours ago</div>
+                            <div class="date">22 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -8230,11 +8230,11 @@
         
                 <div class="video">
                     <a href="https://www.youtube.com/watch?v=9rH5eJCjhtg" target="_blank">
-                        <img src="https://i.ytimg.com/vi/9rH5eJCjhtg/mqdefault.jpg" alt="Why smart people fall for self-help gurus">
+                        <img src="https://i.ytimg.com/vi/9rH5eJCjhtg/mqdefault.jpg" alt="The problem with self-help gurus">
                         <div class="video-info">
-                            <h3>Why smart people fall for self-help gurus</h3>
+                            <h3>The problem with self-help gurus</h3>
                             <div class="channel">Matt D'Avella</div>
-                            <div class="date">6 hours ago</div>
+                            <div class="date">7 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -8735,7 +8735,7 @@
                         <div class="video-info">
                             <h3>Review  Pizza tools.( Pro Peel Gozney and Lilly Codroipo Spatula)</h3>
                             <div class="channel">Massimo Nocerino</div>
-                            <div class="date">7 hours ago</div>
+                            <div class="date">8 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -8746,7 +8746,7 @@
                         <div class="video-info">
                             <h3>How to stretching a pizza a Dj style very easy way #pizzamaker #pizzatools #pizzadough</h3>
                             <div class="channel">Massimo Nocerino</div>
-                            <div class="date">19 hours ago</div>
+                            <div class="date">20 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -9572,7 +9572,7 @@
                         <div class="video-info">
                             <h3>🔴 Battlefield 6 BATTLE ROYALE IS HERE!</h3>
                             <div class="channel">Vikkstar123</div>
-                            <div class="date">8 hours ago</div>
+                            <div class="date">9 hours ago</div>
                         </div>
                     </a>
                 </div>
