--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
                     <div class="video-info">
                         <h3>SIDEMEN FIND THE MISSING WORD</h3>
                         <div class="channel">MoreSidemen</div>
-                        <div class="date">9 hours ago</div>
+                        <div class="date">10 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -200,7 +200,7 @@
                     <div class="video-info">
                         <h3>Sidemen’s Biggest Clutch!</h3>
                         <div class="channel">MoreSidemen</div>
-                        <div class="date">14 hours ago</div>
+                        <div class="date">15 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -211,7 +211,7 @@
                     <div class="video-info">
                         <h3>The Highway to Liberation | Sadhguru</h3>
                         <div class="channel">Sadhguru</div>
-                        <div class="date">16 hours ago</div>
+                        <div class="date">17 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -244,7 +244,7 @@
                     <div class="video-info">
                         <h3>Michael Singer - The Inner Sport of Letting Go</h3>
                         <div class="channel">Seats of Contemplation</div>
-                        <div class="date">21 hours ago</div>
+                        <div class="date">22 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -266,7 +266,7 @@
                     <div class="video-info">
                         <h3>Darwinex TV: Performance Coaching - Session 12</h3>
                         <div class="channel">Darwinex</div>
-                        <div class="date">23 hours ago</div>
+                        <div class="date">Yesterday</div>
                     </div>
                 </a>
             </div>
@@ -651,7 +651,7 @@
                     <div class="video-info">
                         <h3>Darwinex TV: 23.10.2025</h3>
                         <div class="channel">Darwinex</div>
-                        <div class="date">4 days ago</div>
+                        <div class="date">5 days ago</div>
                     </div>
                 </a>
             </div>
@@ -860,7 +860,7 @@
                     <div class="video-info">
                         <h3>Darwinex TV: 21.10.2025</h3>
                         <div class="channel">Darwinex</div>
-                        <div class="date">6 days ago</div>
+                        <div class="date">1 week ago</div>
                     </div>
                 </a>
             </div>
@@ -5116,7 +5116,7 @@
                         <div class="video-info">
                             <h3>Darwinex TV: Performance Coaching - Session 12</h3>
                             <div class="channel">Darwinex</div>
-                            <div class="date">23 hours ago</div>
+                            <div class="date">Yesterday</div>
                         </div>
                     </a>
                 </div>
@@ -5259,7 +5259,7 @@
                         <div class="video-info">
                             <h3>Darwinex TV: 23.10.2025</h3>
                             <div class="channel">Darwinex</div>
-                            <div class="date">4 days ago</div>
+                            <div class="date">5 days ago</div>
                         </div>
                     </a>
                 </div>
@@ -5336,7 +5336,7 @@
                         <div class="video-info">
                             <h3>Darwinex TV: 21.10.2025</h3>
                             <div class="channel">Darwinex</div>
-                            <div class="date">6 days ago</div>
+                            <div class="date">1 week ago</div>
                         </div>
                     </a>
                 </div>
@@ -7249,7 +7249,7 @@
                         <div class="video-info">
                             <h3>The Highway to Liberation | Sadhguru</h3>
                             <div class="channel">Sadhguru</div>
-                            <div class="date">16 hours ago</div>
+                            <div class="date">17 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -7260,7 +7260,7 @@
                         <div class="video-info">
                             <h3>Michael Singer - The Inner Sport of Letting Go</h3>
                             <div class="channel">Seats of Contemplation</div>
-                            <div class="date">21 hours ago</div>
+                            <div class="date">22 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -9583,7 +9583,7 @@
                         <div class="video-info">
                             <h3>SIDEMEN FIND THE MISSING WORD</h3>
                             <div class="channel">MoreSidemen</div>
-                            <div class="date">9 hours ago</div>
+                            <div class="date">10 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -9594,7 +9594,7 @@
                         <div class="video-info">
                             <h3>Sidemen’s Biggest Clutch!</h3>
                             <div class="channel">MoreSidemen</div>
-                            <div class="date">14 hours ago</div>
+                            <div class="date">15 hours ago</div>
                         </div>
                     </a>
                 </div>
